--- a/package.json
+++ b/package.json
@@ -11,22 +11,18 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
-    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-spinners": "^0.17.0",
-    "tailwind-merge": "^3.4.0",
+    "sass": "^1.97.3",
     "yup": "^1.7.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,8 +31,6 @@
     "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
-    "shadcn": "^3.8.4",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
