--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.5",
     "formik": "^2.4.9",
     "lucide-react": "^0.564.0",
+    "modern-normalize": "^3.0.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
